TS-43651 add test and fix gradle setup